--- a/views/page-one.handlebars
+++ b/views/page-one.handlebars
@@ -2,6 +2,39 @@
     <!-- Include Intro.js CSS -->
     <link rel="stylesheet" href="https://unpkg.com/intro.js/minified/introjs.min.css">
     
+        <style>
+        /* Custom styles for Intro.js */
+        .introjs-tooltip {
+            background-color: #333 !important;
+            color: #fff !important;
+        }
+
+        .introjs-tooltiptext {
+            color: #fff !important;
+        }
+
+        .introjs-helperNumberLayer,
+        .introjs-bullets,
+        .introjs-progress,
+        .introjs-button {
+            color: #333 !important;
+            background-color: #fff !important;
+        }
+
+        .introjs-tooltipTitle {
+            font-size: 18px !important;
+            font-weight: bold !important;
+            color: #fff !important;
+        }
+
+        .introjs-arrow {
+            border-top-color: #333 !important;
+        }
+
+        .introjs-progressbar {
+            background-color: #007bff !important;
+        }
+    </style>
 
     <div class="row">
         <!-- Left Column: Your Playlists -->
@@ -76,21 +109,24 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
 
-      <!-- Modal Body -->
-      <div class="modal-body">
-        <form class="create-playlist-form">
-          <div class="form-group" style="margin-right: 15px;">
-            <label for="playlist-title">Playlist Title</label>
-            <input type="text" class="form-control" id="playlist-title" placeholder="Enter playlist title" style="background-color: #444; color: white; border: 1px solid #555;" required>
-          </div>
-          <div class="form-group" style="margin-right: 15px;">
-            <label for="artist-name">Artist</label>
-            <input type="text" class="form-control" id="artist-name" placeholder="Enter artist name" style="background-color: #444; color: white; border: 1px solid #555;" required>
-          </div>
-      <button type="submit" class="btn btn-primary" style="align-self: flex-end;">Create Playlist</button>
-        </form>
+<!-- Modal Body -->
+<div class="modal-body">
+  <form class="create-playlist-form">
+    <div class="form-group d-flex align-items-center" style="margin-right: 15px;">
+      <div class="flex-grow-1 me-3">
+        <label for="playlist-title">Playlist Title</label>
+        <input type="text" class="form-control" id="playlist-title" placeholder="Enter playlist title" style="background-color: #444; color: white; border: 1px solid #555;" required>
       </div>
-
+      <div class="flex-grow-1 me-3">
+        <label for="description">Description</label>
+        <input type="text" class="form-control" id="description" placeholder="Enter description" style="background-color: #444; color: white; border: 1px solid #555;">
+      </div>
+      <div class="d-flex align-items-end">
+        <button type="submit" class="btn btn-primary" style="min-width: 120px;">Create Playlist</button>
+      </div>
+    </div>
+  </form>
+</div>
 
     </div>
   </div>
