--- a/views/page-one.handlebars
+++ b/views/page-one.handlebars
@@ -118,8 +118,8 @@
         <input type="text" class="form-control" id="playlist-title" placeholder="Enter playlist title" style="background-color: #444; color: white; border: 1px solid #555;" required>
       </div>
       <div class="flex-grow-1 me-3">
-        <label for="description">Description</label>
-        <input type="text" class="form-control" id="description" placeholder="Enter description" style="background-color: #444; color: white; border: 1px solid #555;">
+        <label for="artist-name">Description</label>
+        <input type="text" class="form-control" id="artist-name" placeholder="Enter description" style="background-color: #444; color: white; border: 1px solid #555;">
       </div>
       <div class="d-flex align-items-end">
         <button type="submit" class="btn btn-primary" style="min-width: 120px;">Create Playlist</button>
