--- a/views/page-one.handlebars
+++ b/views/page-one.handlebars
@@ -100,6 +100,12 @@
     </div>
   </div>
 
+  <div class="intro-button-container text-right">
+        <button id="start-tour-btn" class="btn btn-primary">Take a Tour</button>
+            <i class="fas fa-question-circle"></i>
+        </button>
+    </div>
+
   <!-- The Modal for Creating Playlists -->
   <div class="modal fade" id="myModal">
     <div class="modal-dialog">
@@ -158,6 +164,8 @@
       </div>
     </div>
   </div>
+
+
 
   <!-- Include Intro.js JavaScript -->
   <script src="https://unpkg.com/intro.js/minified/intro.min.js"></script>
