--- a/views/page-one.handlebars
+++ b/views/page-one.handlebars
@@ -100,6 +100,13 @@
     </div>
   </div>
 
+ <div class="intro-button-container text-right">
+        <button id="start-tour-btn" class="btn btn-primary">Take a Tour</button>
+            <i class="fas fa-question-circle"></i>
+        </button>
+    </div>
+
+
   <!-- The Modal for Creating Playlists -->
   <div class="modal fade" id="myModal">
     <div class="modal-dialog">
